[package]
name = "ckb-pop-cli"
version = "0.1.0"
edition = "2021"
description = "A keyless CLI for the Proof of Presence (PoP) protocol on Nervos CKB."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "6"
ckb-sdk = { version = "5", default-features = false, features = ["rustls-tls"] }
ckb-types = "1.0"
ckb-jsonrpc-types = "1.0"
ckb-hash = "1.0"
qrcode = "0.14"
async-trait = "0.1"
opener = "0.7"
